<resources>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="device_info_default">Unknown</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">Unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Disconnect USB storage</string>
    <string name="sdcard_unmount_sd">Unmount SD card</string>
    <string name="sdcard_format">Format USB storage</string>
    <string name="sdcard_format_sd">Format SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">USB storage</string>
    <string name="sdcard_setting_sd">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="battery_info_voltage_units">mV</string>
    <string name="battery_info_temperature_label">Battery temperature:</string>
    <string name="battery_info_temperature_units">° C</string>
    <string name="battery_info_uptime">Time since boot:</string>
    <string name="battery_info_awake_battery">Awake time on battery:</string>
    <string name="battery_info_awake_plugged">Awake time when charging:</string>
    <string name="battery_info_screen_on">Screen ON time:</string>
    <string name="battery_info_status_unknown">Unknown</string>
    <string name="battery_info_status_charging">Charging</string>
    <string name="battery_info_status_charging_ac">(AC)</string>
    <string name="battery_info_status_charging_usb">(USB)</string>
    <string name="battery_info_status_discharging">Discharging</string>
    <string name="battery_info_status_not_charging">Not charging</string>
    <string name="battery_info_status_full">Full</string>
    <string name="battery_info_power_unplugged">Unplugged</string>
    <string name="battery_info_power_ac">AC</string>
    <string name="battery_info_power_usb">USB</string>
    <string name="battery_info_power_ac_usb">AC+USB</string>
    <string name="battery_info_power_unknown">Unknown</string>
    <string name="battery_info_health_unknown">Unknown</string>
    <string name="battery_info_health_good">Good</string>
    <string name="battery_info_health_overheat">Overheat</string>
    <string name="battery_info_health_dead">Dead</string>
    <string name="battery_info_health_over_voltage">Over voltage</string>
    <string name="battery_info_health_unspecified_failure">Unknown error</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_visibility">Discoverable</string>
    <string name="bluetooth_is_discoverable">Discoverable for %1$s seconds…</string>
    <string name="bluetooth_not_discoverable">Make device discoverable</string>
    <string name="bluetooth_lock_voice_dialing">Disable voice dialling</string>
    <string name="bluetooth_lock_voice_dialing_summary">Disable Bluetooth voice dialling when screen is locked</string>
    <string name="bluetooth_devices">Bluetooth devices</string>
    <string name="bluetooth_device_name">Device name</string>
    <string name="bluetooth_name_not_set">No name set, using account name</string>
    <string name="bluetooth_scan_for_devices">Scan devices</string>
    <string name="bluetooth_disconnect_blank">%1$s will be disconnected.</string>
    <string name="bluetooth_connected">Connected</string>
    <string name="bluetooth_disconnected">Disconnected</string>
    <string name="bluetooth_disconnecting">Disconnecting...</string>
    <string name="bluetooth_connecting">Connecting...</string>
    <string name="bluetooth_unknown" />
    <string name="bluetooth_not_connected">Pair with this device</string>
    <string name="bluetooth_pairing">Pairing...</string>
    <string name="bluetooth_paired">Paired but not connected</string>
    <string name="bluetooth_device_paired">Paired</string>
    <string name="bluetooth_device">Handsfree/headset</string>
    <string name="progress_scanning">Scanning</string>
    <string name="bluetooth_notif_ticker">Bluetooth pairing request</string>
    <string name="bluetooth_notif_title">Pairing request</string>
    <string name="bluetooth_notif_message">Select to pair with</string>
    <string name="device_picker">Bluetooth device picker</string>
    <string name="bluetooth_permission_request">Bluetooth permission request</string>
    <string name="bluetooth_ask_enablement">Application requests to turn on Bluetooth. Continue?</string>
    <string name="bluetooth_ask_discovery">Application requests to make your device visible to other Bluetooth devices for %1$d seconds. Continue?</string>
    <string name="bluetooth_ask_enablement_and_discovery">Application requests to turn on Bluetooth and to make your device visible to other devices for %1$d seconds. Continue?</string>
    <string name="bluetooth_turning_on">Turning on Bluetooth...</string>
    <string name="bluetooth_scan_text">Empty button…</string>
    <string name="bluetooth_settings_text">Empty button…</string>
    <string name="bluetooth_enable_text">Empty button…</string>
    <string name="bluetooth_device_info_connectButton_text">Turn on Bluetooth</string>
    <string name="bluetooth_device_info_deviceInfo_text" />
    <string name="date_and_time">Date and time settings</string>
    <string name="date_time_12_hour_sample">1:00 PM</string>
    <string name="date_time_24_hour_sample">13:00</string>
    <string name="date_time_changeTime_text">Set time</string>
    <string name="date_time_changeDate_text">Date</string>
    <string name="choose_timezone">Select time zone</string>
    <string name="default_date_format">MM/dd/yyyy</string>
    <string name="normal_date_format">Normal (%s)</string>
    <string name="display_preview_label">Preview:</string>
    <string name="display_font_size_label">Font size:</string>
    <string name="intent_sender_data_label">Data:</string>
    <string name="intent_sender_sendbroadcast_text">Send broadcast</string>
    <string name="intent_sender_action_label">Action:</string>
    <string name="intent_sender_startactivity_text">Start activity</string>
    <string name="intent_sender_resource_label">Resource:</string>
    <string name="intent_sender_account_label">Account:</string>
    <string name="proxy_clear_text">Clear</string>
    <string name="proxy_port_label">Port</string>
    <string name="proxy_defaultView_text">Restore defaults</string>
    <string name="proxy_action_text">Save</string>
    <string name="proxy_hostname_label">Hostname</string>
    <string name="proxy_error">Attention</string>
    <string name="proxy_error_dismiss">OK</string>
    <string name="proxy_error_invalid_host">The hostname you typed is not valid</string>
    <string name="proxy_error_empty_port">You must complete the port field</string>
    <string name="proxy_error_empty_host_set_port">The port field must be empty if the host field is empty</string>
    <string name="proxy_error_invalid_port">The port you typed is not valid</string>
    <string name="radio_info_signal_location_label">Location:</string>
    <string name="sound_settings_title">Sound</string>
    <string name="silent_mode_title">Silent mode</string>
    <string name="silent_mode_summary">All sounds except media and alarms are silenced</string>
    <string name="all_volume_title">Volume</string>
    <string name="ring_volume_summary" />
    <string name="vibrate_title">Vibrate</string>
    <string name="vibrate_summary">Vibrate phone for incoming calls</string>
    <string name="notification_sound_title">Notification ringtone</string>
    <string name="notification_sound_summary">Set your default notification ringtone</string>
    <string name="notification_sound_dialog_title">Select notification ringtone</string>
    <string name="sound_effects_enable_title">Audible selection</string>
    <string name="sound_effects_enable_summary_on">Play sound when making screen selection</string>
    <string name="sound_effects_enable_summary_off">Play sound when making screen selection</string>
    <string name="lock_sounds_enable_title">Screen lock sounds</string>
    <string name="lock_sounds_enable_summary_on">Play sounds when locking and unlocking screen</string>
    <string name="lock_sounds_enable_summary_off">Play sounds when locking and unlocking screen</string>
    <string name="haptic_feedback_enable_title">Haptic feedback</string>
    <string name="haptic_feedback_enable_summary_on">Vibrate when pressing softkeys and on certain UI interactions</string>
    <string name="haptic_feedback_enable_summary_off">Vibrate when pressing softkeys and on certain UI interactions</string>
    <string name="emergency_tone_title">Emergency tone</string>
    <string name="emergency_tone_summary">Set function when emergency call is placed</string>
    <string name="sound_category_sound_title">General</string>
    <string name="sound_category_notification_title">Notifications</string>
    <string name="sound_category_feedback_title">Feedback</string>
    <string name="vibration_intensity">Vibration intensity</string>
    <string name="vibration_intensity_summary">Set your touch feedback vibration intensity</string>
    <string name="level_optimizer_title">Level optimiser</string>
    <string name="level_optimizer_summary">Optimise media volume</string>
    <string name="label_model_name">1.기기의 명칭모델명 :</string>
    <string name="model_name">무선데이터통신시스템용 무선기기(YP-GB70)</string>
    <string name="label_certification">2.인증번호 :</string>
    <string name="certification">SEC-YPGB70(B)</string>
    <string name="label_mutual">3.인증받은 자의 상호 :</string>
    <string name="label_mutual_factory">삼성전자(주)</string>
    <string name="power">정격 : DC 5V - 700mA</string>
    <string name="label_menufacture_date">4.제조년월일 :</string>
    <string name="label_sn">5.S/N</string>
    <string name="device_summary_info_01">- 해당 무선설비는 운용 중 전파혼신</string>
    <string name="device_summary_info_02">가능성이 있음</string>
</resources>